--- a/jobs/page2.html
+++ b/jobs/page2.html
@@ -123,9 +123,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17192077" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17206889" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="http://itkit.io/">IT Kit – curated tools for IT managers</a>
+                                    <a href="https://slacklunch.club">Slack Lunch Club</a>
                                 </span>
                             </td>
                         </tr>
@@ -315,7 +315,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527975004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527975604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
