--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -405,7 +405,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17208065">
                                         
-                                            471 comments
+                                            472 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=spacebearmakes">spacebearmakes</a></strong> &nbsp;•&nbsp;
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/ImageOptim/gifski/releases/tag/0.8.3">Windows gifski.exe with a digital signature</a>
+                                    <a href="https://www.logolounge.com/articles/2018-logo-trends">Logo design trends of 2018</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17195758">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17196558">
                                         
-                                            101 comments
+                                            47 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ronjouch">ronjouch</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527769543"
+                                            href="https://news.ycombinator.com/user?id=zwieback">zwieback</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527776977"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     228 points
                                 </span>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527975604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527976203" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
