--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.logolounge.com/articles/2018-logo-trends">Logo design trends of 2018</a>
+                                    <a href="https://github.com/ImageOptim/gifski/releases/tag/0.8.3">Windows gifski.exe with a digital signature</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17196558">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17195758">
                                         
-                                            47 comments
+                                            101 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=zwieback">zwieback</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527776977"
+                                            href="https://news.ycombinator.com/user?id=ronjouch">ronjouch</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527769543"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    227 points
+                                    228 points
                                 </span>
                             </td>
                         </tr>
@@ -483,7 +483,7 @@
                                             href="https://news.ycombinator.com/user?id=sjcsjc">sjcsjc</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527917872"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    212 points
+                                    213 points
                                 </span>
                             </td>
                         </tr>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527975604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527976203" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
