--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -399,17 +399,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.theguardian.com/money/2018/jun/01/visa-card-network-crashes-and-sparks-payment-chaos">Visa card network crashes, causing increased decline rates across UK and Europe</a>
+                                    <a href="http://ciml.info/">A Course in Machine Learning</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17206747">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17214588">
                                         
-                                            181 comments
+                                            23 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=adriancooney">adriancooney</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527869395"
+                                            href="https://news.ycombinator.com/user?id=federicoponzi">federicoponzi</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527947521"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     199 points
                                 </span>
@@ -458,7 +458,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527979804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527980403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
