--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -189,13 +189,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17214953">
                                         
-                                            25 comments
+                                            27 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=bigato">bigato</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527953227"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    132 points
+                                    136 points
                                 </span>
                             </td>
                         </tr>
@@ -519,19 +519,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.express.co.uk/news/science/967289/neolithic-population-drop-brutal-warfare-y-chromosome-scientists-research">Sudden Neolithic population drop was the result of brutal warfare: study</a>
+                                    <a href="https://nancysbraintalks.mit.edu/course/9-11-the-human-brain">MIT 9.11: The Human Brain (Spring 2018)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17203048">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17216634">
                                         
-                                            74 comments
+                                            7 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=montrose">montrose</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527834585"
+                                            href="https://news.ycombinator.com/user?id=indescions_2018">indescions_2018</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527976883"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    100 points
+                                    103 points
                                 </span>
                             </td>
                         </tr>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527984603" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527985205" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
