--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -339,7 +339,7 @@
                                             href="https://news.ycombinator.com/user?id=coloneltcb">coloneltcb</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527876717"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    402 points
+                                    403 points
                                 </span>
                             </td>
                         </tr>
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.evonide.com/side-channel-attacking-browsers-through-css3-features/">Side-channel attacking browsers through CSS3 features</a>
+                                    <a href="https://github.com/OpenDUNE/OpenDUNE">OpenDUNE – An open-source recreation of the game Dune II</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17197944">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17214320">
                                         
-                                            77 comments
+                                            101 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=drchiu">drchiu</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527785938"
+                                            href="https://news.ycombinator.com/user?id=mariuz">mariuz</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527943469"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     363 points
                                 </span>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527984603" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527985205" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
