--- a/jobs/index.html
+++ b/jobs/index.html
@@ -100,20 +100,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17194353" class="node"><i
-                                            class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/egoist/maid">Maid – Markdown driven task runner</a>
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_hot_topic_title">
                                     <a href="https://news.ycombinator.com/item?id=17215474" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
                                     <a href="https://www.verdaccio.org/">Verdaccio – Open-Source Lightweight private NPM proxy registry</a>
@@ -145,6 +131,20 @@
                                     <a href="https://news.ycombinator.com/item?id=17213891" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
                                     <a href="https://github.com/oleks/git-ready-to-deploy">Git-Ready to Deploy? Check for uncommitted and non-pushed changes</a>
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_hot_topic_title">
+                                    <a href="https://news.ycombinator.com/item?id=17210812" class="node"><i
+                                            class="fas fa-comment"></i></a>&nbsp;
+                                    <a href="https://www.remotejob.rocks/">Remote Job Rocks – The simplest remote job board on the web</a>
                                 </span>
                             </td>
                         </tr>
@@ -571,7 +571,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1528006805" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528007403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
