--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -212,19 +212,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.epi.org/publication/wage-theft-bigger-problem-forms-theft-workers/">Wage Theft is a Bigger Problem Than Other Forms of Theft</a>
+                                    <a href="http://www.lihaoyi.com/post/ZeroOverheadTreeProcessingwiththeVisitorPattern.html?a=1">Zero-Overhead Tree Processing with the Visitor Pattern</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17216319">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17165866">
                                         
-                                            182 comments
+                                            80 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=walterbell">walterbell</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527972769"
+                                            href="https://news.ycombinator.com/user?id=lihaoyi">lihaoyi</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527404857"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    214 points
+                                    215 points
                                 </span>
                             </td>
                         </tr>
@@ -489,7 +489,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528007626" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528008003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
