--- a/top_stories/halfweek/index.html
+++ b/top_stories/halfweek/index.html
@@ -338,7 +338,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17200996">
                                         
-                                            349 comments
+                                            350 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=doener">doener</a></strong> &nbsp;•&nbsp;
@@ -416,7 +416,7 @@
                                             href="https://news.ycombinator.com/user?id=mariuz">mariuz</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527943469"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    398 points
+                                    399 points
                                 </span>
                             </td>
                         </tr>
@@ -464,7 +464,7 @@
                                             href="https://news.ycombinator.com/user?id=lando2319">lando2319</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527898667"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    387 points
+                                    388 points
                                 </span>
                             </td>
                         </tr>
@@ -548,17 +548,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://80000hours.org/podcast/episodes/aaron-hamlin-voting-refor/">Politics is bad because we use an 18th century voting system</a>
+                                    <a href="https://nancysbraintalks.mit.edu/course/9-11-the-human-brain">MIT 9.11: The Human Brain (Spring 2018)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17205357">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17216634">
                                         
-                                            338 comments
+                                            24 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=robertwiblin">robertwiblin</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527861562"
+                                            href="https://news.ycombinator.com/user?id=indescions_2018">indescions_2018</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527976883"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     341 points
                                 </span>
@@ -606,7 +606,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528008604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528009204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
