--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -218,7 +218,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17215679">
                                         
-                                            1 comments
+                                            comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=jseliger">jseliger</a></strong> &nbsp;•&nbsp;
@@ -458,7 +458,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17217498">
                                         
-                                            3 comments
+                                            4 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=hdivider">hdivider</a></strong> &nbsp;•&nbsp;
@@ -612,7 +612,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528010403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528011003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
