--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -212,19 +212,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://yosefk.com/blog/patents-how-and-why-to-get-them.html">Patents: how and why to get them</a>
+                                    <a href="https://www.nesdis.noaa.gov/content/goes-17-releases-%E2%80%98first-light%E2%80%99-imagery-its-advanced-baseline-imager-abi">GOES-17 Releases ‘First Light’ Imagery from Its Advanced Baseline Imager</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17216937">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17211311">
                                         
-                                            37 comments
+                                            24 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=dedalus">dedalus</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527981293"
+                                            href="https://news.ycombinator.com/user?id=el_duderino">el_duderino</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527894670"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    93 points
+                                    94 points
                                 </span>
                             </td>
                         </tr>
@@ -489,7 +489,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528015203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528015805" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
