--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -212,17 +212,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.telegraph.co.uk/men/relationships/11904203/Well-done-feminism.-Now-man-are-afraid-to-help-women-at-work.html">Well done, feminism. Now men are afraid to help women at work</a>
+                                    <a href="https://www.davd.eu/securing-macos/">Securing macOS [in 2018]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17218509">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17218678">
                                         
                                             comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=throwaway13456">throwaway13456</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528013676"
+                                            href="https://news.ycombinator.com/user?id=bkircher">bkircher</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528017225"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     4 points
                                 </span>
@@ -489,7 +489,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528018803" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528019404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
