--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -218,7 +218,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17218285">
                                         
-                                            comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=diodorus">diodorus</a></strong> &nbsp;•&nbsp;
@@ -489,7 +489,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528021803" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528022403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
