--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -458,13 +458,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17218250">
                                         
-                                            162 comments
+                                            165 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=katiey">katiey</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528007929"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    197 points
+                                    198 points
                                 </span>
                             </td>
                         </tr>
@@ -548,19 +548,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://qz.com/96206/google-admits-those-infamous-brainteasers-were-completely-useless-for-hiring/">Google admits brainteasers were useless for hiring (2013)</a>
+                                    <a href="https://twitter.com/guieevc/status/1002494428748140544">Cisco says 90% of internet traffic goes through Erlang-controlled nodes</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17196974">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17218190">
                                         
-                                            147 comments
+                                            55 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=gk1">gk1</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527780181"
+                                            href="https://news.ycombinator.com/user?id=okket">okket</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528006878"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    179 points
+                                    172 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528039204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528039803" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
